# refactored_garbanzo

./: README.md  main.py  pyproject.toml
pages_html/: catalog.html  category.html  contacts.html  home.html  orders.html
